--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm install && npm run build"
+  command = "npm --openssl-legacy-provider  install && npm --openssl-legacy-provider  run build"
   functions = "functions"
